# android-vibe-keyboard

./: .gitignore  Cargo.toml  build.gradle  gradle.properties  gradlew  settings.gradle
.dal/: decisions.md  wisdom.md
.dal/dev/: charter.md  dal.cue  history.md
.dal/leader/: charter.md  dal.cue  history.md
.dal/verifier/: charter.md  dal.cue  history.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/example/androidvibehangul/: HangulEngine.java  HangulInputService.java
app/src/main/res/layout/: keyboard_view.xml
app/src/main/res/xml/: keyboard_hangul.xml  keyboard_qwerty.xml  method.xml
rust/: Cargo.toml
rust/hangul-core/: Cargo.toml
rust/hangul-core/src/: lib.rs
rust/hangul-jni/: Cargo.toml
rust/hangul-jni/src/: lib.rs
